--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer Commit</title>
+    <title>Tercer Commit</title>
 </head>
 <body>
     
