--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,10 @@
     <title>Segundo Commit</title>
 </head>
 <body>
-    
+    <div>
+        <h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti repellat a, esse quia animi, mollitia sunt excepturi vel eveniet dicta quibusdam ipsum modi fuga et! Earum reprehenderit possimus, nulla sint facere, molestiae commodi accusantium tenetur vitae voluptas at provident voluptatum quo, perferendis laudantium minima voluptatem corporis quia perspiciatis cumque id.</p>
+        </h2>
+    </div>
 </body>
 </html>
